--- a/.github/workflows/dotnet-windows.yml
+++ b/.github/workflows/dotnet-windows.yml
@@ -17,11 +17,11 @@ jobs:
           dotnet-version:  |
             6.0.x
             7.0.x
-      - name: Install Android
-        run: dotnet workload install android
       - name: Restore dependencies
         run: dotnet restore ./src/CSharp/EasyMicroservices.Cores.sln
       - name: Build
         run: dotnet build ./src/CSharp/EasyMicroservices.Cores.sln --no-restore
       - name: Test
-        run: dotnet test ./src/CSharp/EasyMicroservices.Cores.sln --no-build --verbosity normal
+        run:  |
+          dotnet test ./src/CSharp/EasyMicroservices.Cores.sln --no-build --verbosity normal -f net6.0
+          dotnet test ./src/CSharp/EasyMicroservices.Cores.sln --no-build --verbosity normal -f net7.0
