--- a/.github/workflows/dotnet-macos.yml
+++ b/.github/workflows/dotnet-macos.yml
@@ -17,6 +17,8 @@ jobs:
           dotnet-version:  |
             6.0.x
             7.0.x
+        env:
+            NUGET_CERT_REVOCATION_MODE: offline
       - name: Restore dependencies
         run: dotnet restore ./src/CSharp/EasyMicroservices.Cores.sln
       - name: Build
