--- a/.github/workflows/nuget-push-public.yml
+++ b/.github/workflows/nuget-push-public.yml
@@ -13,7 +13,7 @@ jobs:
             6.0.x
             7.0.x
         env:
-          NUGET_CERT_REVOCATION_MODE: offline
+            NuGetDirectory: ${{ github.workspace}}/nuget
       - name: Restore dependencies
         run: dotnet restore ./src/CSharp/EasyMicroservices.Cores.sln
       - name: Build
@@ -23,4 +23,4 @@ jobs:
       - name: Create the package
         run: dotnet pack ./src/CSharp/EasyMicroservices.Cores.sln --output nupkgs
       - name: Publish the package to NuGet.org
-        run: dotnet nuget push nupkgs\*.nupkg -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate
+        run: dotnet nuget push ${{env.NuGetDirectory}}/*.nupkg -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate
