--- a/.github/workflows/nuget-push-public.yml
+++ b/.github/workflows/nuget-push-public.yml
@@ -12,8 +12,6 @@ jobs:
           dotnet-version: |
             6.0.x
             7.0.x
-        env:
-            NuGetDirectory: ${{ github.workspace}}/nuget
       - name: Restore dependencies
         run: dotnet restore ./src/CSharp/EasyMicroservices.Cores.sln
       - name: Build
@@ -21,6 +19,6 @@ jobs:
       - name: Test
         run: dotnet test ./src/CSharp/EasyMicroservices.Cores.sln --no-build --verbosity normal
       - name: Create the package
-        run: dotnet pack ./src/CSharp/EasyMicroservices.Cores.sln --output ${{env.NuGetDirectory}}
+        run: dotnet pack ./src/CSharp/EasyMicroservices.Cores.sln --output nupkgs
       - name: Publish the package to NuGet.org
-        run: dotnet nuget push ${{env.NuGetDirectory}}/*.nupkg -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate
+        run: dotnet nuget push nupkgs\*.nupkg -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate
