--- a/.github/workflows/nuget-push-public-windows.yml
+++ b/.github/workflows/nuget-push-public-windows.yml
@@ -12,6 +12,8 @@ jobs:
           dotnet-version: |
             6.0.x
             7.0.x
+        env:
+          DOTNET_INSTALL_DIR: /usr/share/dotnet
       - name: Restore dependencies
         run: dotnet restore ./src/CSharp/EasyMicroservices.Cores.sln
       - name: Build
@@ -21,4 +23,4 @@ jobs:
       - name: Create the package
         run: dotnet pack ./src/CSharp/EasyMicroservices.Cores.sln --output nupkgs
       - name: Publish the package to NuGet.org
-        run: dotnet nuget push nupkgs/*.nupkg -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate
+        run: dotnet nuget push nupkgs\*.nupkg -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate
