--- a/.github/workflows/dotnet-format-action.yml
+++ b/.github/workflows/dotnet-format-action.yml
@@ -15,6 +15,7 @@ jobs:
           dotnet-version:  |
             6.0.x
             7.0.x
+            8.0.x
       - name: Run dotnet format
         id: format
         uses: jfversluis/dotnet-format@v1.0.5
@@ -26,6 +27,7 @@ jobs:
         run:  |
           dotnet test ./src/CSharp/EasyMicroservices.Cores.sln -f net6.0
           dotnet test ./src/CSharp/EasyMicroservices.Cores.sln -f net7.0
+          dotnet test ./src/CSharp/EasyMicroservices.Cores.sln -f net8.0
       - name: Commit files
         if: steps.format.outputs.has-changes == 'true'
         uses: EndBug/add-and-commit@v4.1.0
