add support for activity logs #25

--- a/src/CSharp/EasyMicroservices.Cores.Database/EasyMicroservices.Cores.Database.csproj
+++ b/src/CSharp/EasyMicroservices.Cores.Database/EasyMicroservices.Cores.Database.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>netstandard2.0;netstandard2.1;net45;net6.0;net8.0</TargetFrameworks>
     <Platforms>AnyCPU;x64;x86</Platforms>
     <Authors>EasyMicroservices</Authors>
-    <Version>0.0.0.66</Version>
+    <Version>0.0.0.67</Version>
     <Description>core of database.</Description>
     <Copyright>EasyMicroservices@gmail.com</Copyright>
     <PackageTags>core,cores,base,database</PackageTags>
@@ -21,10 +21,10 @@
     <PackageReference Include="EasyMicroservices.Mapper" Version="*" />
     <PackageReference Include="EasyMicroservices.ServiceContracts" Version="*" />
     <PackageReference Include="EasyMicroservices.Utilities" Version="*" />
+    <PackageReference Include="EasyMicroservices.Serialization" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Database\Entities\" />
     <Folder Include="Database\ReadableLogics\" />
     <Folder Include="Database\WritableLogics\" />
     <None Include="..\..\..\README.md" Pack="true" PackagePath="\" />
