Support for unique identity permissions and some tests

--- a/src/CSharp/EasyMicroservices.Cores.Contracts/EasyMicroservices.Cores.Contracts.csproj
+++ b/src/CSharp/EasyMicroservices.Cores.Contracts/EasyMicroservices.Cores.Contracts.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
   
+  <ItemGroup>
+    <PackageReference Include="EasyMicroservices.Utilities" Version="*" />
+  </ItemGroup>
+  
 </Project>
