--- a/.github/workflows/dotnet-windows.yml
+++ b/.github/workflows/dotnet-windows.yml
@@ -16,9 +16,9 @@ jobs:
           dir
           git clone https://github.com/EasyMicroservices/Authentications-Microservice.git
           dir
-          cd Authentications-Microservice/EasyMicroservices.AuthenticationsMicroservice.WebApi
+          cd Authentications-Microservice
           dir
-          dotnet run --project ./EasyMicroservices.AuthenticationsMicroservice.WebApi/EasyMicroservices.AuthenticationsMicroservice.WebApi.csproj
+          dotnet run --project Authentications-Microservice/EasyMicroservices.AuthenticationsMicroservice.WebApi/EasyMicroservices.AuthenticationsMicroservice.WebApi.csproj
           cd ..
         shell: bash
       - name: Setup .NET
