add white label

--- a/.github/workflows/dotnet-windows.yml
+++ b/.github/workflows/dotnet-windows.yml
@@ -11,16 +11,6 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Clone and run Authentication
-        run:  |
-          dir
-          git clone https://github.com/EasyMicroservices/Authentications-Microservice.git
-          dir
-          cd Authentications-Microservice
-          dir
-          dotnet run --project src/CSharp/EasyMicroservices.AuthenticationsMicroservice.WebApi/EasyMicroservices.AuthenticationsMicroservice.WebApi.csproj
-          cd ..
-        shell: bash
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
@@ -31,6 +21,21 @@ jobs:
         env:
             DOTNET_INSTALL_DIR: /usr/share/dotnet
             NUGET_CERT_REVOCATION_MODE: offline
+      - name: Clone and run Authentication
+        run:  |
+          git clone https://github.com/EasyMicroservices/Authentications-Microservice.git
+          cd Authentications-Microservice
+          dotnet run --project src/CSharp/EasyMicroservices.AuthenticationsMicroservice.WebApi/EasyMicroservices.AuthenticationsMicroservice.WebApi.csproj
+          cd ..
+        shell: bash
+        shell: bash
+      - name: Clone and run WhiteLabel
+        run:  |
+          git clone https://github.com/EasyMicroservices/WhiteLabels-Microservice.git
+          cd WhiteLabels-Microservice
+          dotnet run --project src/CSharp/EasyMicroservices.WhiteLabelsMicroservice.WebApi/EasyMicroservices.WhiteLabelsMicroservice.WebApi.csproj
+          cd ..
+        shell: bash
       - name: Restore dependencies
         run: dotnet restore ./src/CSharp/EasyMicroservices.Cores.sln
       - name: Build
