--- a/.github/workflows/nuget-push-public-windows.yml
+++ b/.github/workflows/nuget-push-public-windows.yml
@@ -6,15 +6,31 @@ jobs:
   build-test-prep-push:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-dotnet@v3
+      - uses: actions/checkout@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: |
-            6.0.x
-            7.0.x
-            8.0.x
-        env:
-          DOTNET_INSTALL_DIR: /usr/share/dotnet
+          dotnet-version: '6.0.x'
+
+      - name: Clone and run Authentication
+        run:  |
+          git clone https://github.com/EasyMicroservices/Authentications-Microservice.git
+          cd Authentications-Microservice
+          dotnet run --project src/CSharp/EasyMicroservices.AuthenticationsMicroservice.WebApi/EasyMicroservices.AuthenticationsMicroservice.WebApi.csproj &
+          AUTH_PID=$!
+          echo "Started Authentication Service with PID $AUTH_PID"
+          cd ..
+        shell: bash
+
+      - name: Clone and run WhiteLabel
+        run: |
+          git clone https://github.com/EasyMicroservices/WhiteLabels-Microservice.git
+          cd WhiteLabels-Microservice
+          dotnet run --project src/CSharp/EasyMicroservices.WhiteLabelsMicroservice.WebApi/EasyMicroservices.WhiteLabelsMicroservice.WebApi.csproj &
+          WHITELABEL_PID=$!
+          echo "Started WhiteLabel Service with PID $WHITELABEL_PID"
+          cd ..
+        shell: bash
       - name: Restore dependencies
         run: dotnet restore ./src/CSharp/EasyMicroservices.Cores.sln
       - name: Build
@@ -25,3 +41,9 @@ jobs:
         run: dotnet pack ./src/CSharp/EasyMicroservices.Cores.sln --output nupkgs
       - name: Publish the package to NuGet.org
         run: dotnet nuget push nupkgs\*.nupkg -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate
+      - name: Cleanup
+        if: always() 
+        run:          echo "Shutting down Authentication Service with PID $AUTH_PID"
+          kill $AUTH_PID echo "Authentication Service shutdown failed"
+          echo "Shutting down WhiteLabel Service with PID $WHITELABEL_PID"
+          kill $WHITELABEL_PID echo "WhiteLabel Service shutdown failed"
